# backend

./: docker-compose.yml
api-service/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  gateway.jmx  project_dump.sh  write-test.jmx
api-service/migrations/00000000000001_shared/: down.sql  up.sql
api-service/migrations/2023-11-17-202608_create_boards/: up.sql
api-service/migrations/2023-11-23-203951_create_buildings/: down.sql  up.sql
api-service/migrations/2023-11-23-204859_create_building_users/: down.sql  up.sql
api-service/migrations/2023-11-23-204915_create_user_profiles/: down.sql  up.sql
api-service/migrations/2023-11-23-204922_create_user_ratings/: down.sql  up.sql
api-service/migrations/2023-11-23-204931_create_bu_spaces/: down.sql  up.sql
api-service/migrations/2023-11-23-204931_create_building_user_parking_spaces/: down.sql  up.sql
api-service/migrations/2023-11-23-204931_create_spaces/: down.sql  up.sql
api-service/migrations/2023-12-11-204427_create_bu_space_favorites/: down.sql  up.sql
api-service/migrations/2023-12-11-204427_create_space_favorites/: down.sql  up.sql
api-service/migrations/2023-12-11-210720_create_availability/: down.sql  up.sql
api-service/migrations/2023-12-11-210720_create_user_listings/: down.sql  up.sql
api-service/migrations/2023-12-11-210723_create_reservations/: down.sql  up.sql
api-service/migrations/2023-12-11-210723_create_user_bookings/: down.sql  up.sql
api-service/migrations/2024-01-05_create_stripe_accounts/: down.sql  up.sql
api-service/migrations/2024-01-08_create_stripe_customers/: down.sql  up.sql
api-service/migrations/2024-01-13_create_reservation_chat_messages/: down.sql  up.sql
api-service/migrations/2024-01-28_space_images/: down.sql  up.sql
api-service/migrations/2024-02-01_space_reviews/: down.sql  up.sql
api-service/migrations/2024-02-01_space_summaries/: down.sql  up.sql
api-service/migrations/2024-02-01_user_reviews/: down.sql  up.sql
api-service/migrations/2024-02-01_user_summaries/: down.sql  up.sql
api-service/migrations/2024-02-24_user_notif_tokens/: down.sql  up.sql
api-service/migrations/2024-03-02_stripe_events/: down.sql  up.sql
api-service/src/: db.rs  error.rs  main.rs  schema.rs
api-service/src/api/: mod.rs
api-service/src/api/availability/: create.rs  delete.rs  list.rs  mod.rs  public.rs  read.rs  search.rs  update.rs
api-service/src/api/buildings/: create.rs  delete.rs  entities.rs  list.rs  mod.rs  public.rs  read.rs  update.rs
api-service/src/api/dev/: mod.rs  reset_db.rs
api-service/src/api/reservations/: create.rs  delete.rs  list.rs  list_for_host.rs  mod.rs  public.rs  read.rs  update.rs
api-service/src/api/spaces/: create.rs  delete.rs  list.rs  mod.rs  public.rs  read.rs  s3.rs  update.rs
api-service/src/api/stripe/: mod.rs
api-service/src/api/users/: mod.rs
api-service/src/api/validation/: list_param.rs  mod.rs
api-service/src/auth/: jwt.rs  middleware.rs  mod.rs  state.rs  user.rs
api-service/src/board/: entities.rs
api-service/src/board/routes/: update.rs
api-service/src/buildings/: entities.rs
api-service/src/buildings/routes/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
api-service/src/db/: mod.rs  s3.rs
api-service/src/db/availability/: entities.rs  mod.rs
api-service/src/db/buildings/: entities.rs  mod.rs
api-service/src/db/redis/: mod.rs
api-service/src/dev/: mod.rs  reset_db.rs
api-service/src/health/: mod.rs
api-service/src/redirect/: mod.rs  stripe.rs
api-service/src/services/: mod.rs
api-service/src/stripe/: account.rs  client.rs  mod.rs
api-service/src/utils/: hashids.rs  mod.rs
gateway/: .gitignore  Cargo.toml  Dockerfile
gateway/src/: gateway.rs  main.rs  route_map.rs  routes.rs
gateway/src/auth/: jwt.rs  mod.rs  state.rs
(+244 files in other folders)
