[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
alcoholic_jwt = "4091.0.0"
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = [
  "postgres",
  "r2d2",
  "uuid",
  "numeric",
  "chrono",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
futures-util = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["sync"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
