[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4"
actix-web-httpauth = "0.8"
alcoholic_jwt = "4091.0.0" # This seems like an unusual version, double-check it
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rusoto_core = "0.48"
rusoto_s3 = "0.48"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "bigdecimal",
  "uuid",
] }
tokio = { version = "1.34" }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1.5", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
