[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4"
actix-web-httpauth = "0.8"
alcoholic_jwt = "4091.0.0"
bb8 = "0.8.3"
bb8-redis = "0.14.0"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
expo_push_notification_client = "0.2.3"
futures = "0.3"
futures-util = "0.3"
google_maps = { version = "3.4", default-features = false, features = [
  "places",
  "geocoding",
  "enable-reqwest",
] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
rusoto_core = "0.48"
rusoto_s3 = "0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "bigdecimal",
  "uuid",
] }
tokio = { version = "1" }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1.5", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
