[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
alcoholic_jwt = "4091.0.0"
env_logger = "0.11.3"
log = "0.4.21"
pingora = { version = "0.1", features = ["proxy"] }
prometheus = "0.13.3"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3.26"
tokio = { version = "1" }
nanoid = "0.4.0"
regex = "1.10.3"
http = "1.1.0"
